Fix alignment of the title

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 .text-title {
   font-size: 2.5rem;
   margin-left: 1rem;
+  vertical-align: middle;
 }
 
 .text-logo {
